--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -1,28 +1,25 @@
 <div>
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <!-- <a href="#" class="brand">Solar Map</a> -->
-            <ul class='nav' role='navigation'>
+    <div class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <ul class='nav navbar-nav'>
                 <li class="dropdown">
                     <a href="#" class='dropdown-toggle' data-toggle='dropdown'>Find Address <b class="caret"></b></a>
-                    <div class='dropdown-menu'>
+                    <ul class='dropdown-menu'>
                         <div data-dojo-attach-point="findAddressDiv"></div>
-                    </div>
+                    </ul>
                 </li>
-            </ul>
-            <button class="btn" data-toggle='button' data-dojo-attach-point='drawBtn'>
-                <i class="icon-edit"></i> Draw Solar Area
-            </button>
-            <button class="btn" data-dojo-attach-point="clearBtn">
-                <i class="icon-remove"></i> Clear Drawing
-            </button>
-            <ul class="nav" role="navigation">
                 <li class="dropdown">
                     <a href="#" class='dropdown-toggle' data-toggle='dropdown'>Solar Overlay <b class="caret"></b></a>
                     <div class="dropdown-menu">
                         <div data-dojo-attach-point="solarOverlayControlsDiv"></div>
                     </div>
                 </li>
+                <button class="btn btn-default navbar-btn" data-toggle='button' data-dojo-attach-point='drawBtn'>
+                    <span class="glyphicon glyphicon-edit"></span> Draw Solar Area
+                </button>
+                <button class="btn btn-default navbar-btn" data-dojo-attach-point="clearBtn">
+                    <span class="glyphicon glyphicon-remove"></span> Clear Drawing
+                </button>
             </ul>
         </div>
     </div>
