--- a/src/app/resources/Popup.styl
+++ b/src/app/resources/Popup.styl
@@ -27,9 +27,12 @@
     div[data-dojo-attach-point='calculationsDiv']
         margin-top 10px
     .slider
-        width 170px
-    .calc-label
-        padding 10px
-        font-weight bold
-        text-align right
-        width 200px
+        width 100%
+        margin-top 7px
+    .help-block
+        margin-top 0
+        font-size 0.85em
+    .form-horizontal
+        padding-right 20px
+        .control-label
+            padding-right 0
